# s3upoader

./: README.md  install.sh  main.py  pyproject.toml  requirements.txt  uninstall.sh
s3up/: __init__.py  s3up.py  settings.py
s3up/utils/: logger.py  queue_wrapper.py  utils.py
